--- a/prime_home/templates/prime_home/about_page.html
+++ b/prime_home/templates/prime_home/about_page.html
@@ -206,181 +206,210 @@ We are committed to assisting Filipinos in passing the Korean language proficien
             <ul class="organization-chart-tree-level4">
                 <li>
                     <div class="organization-chart-tree-teacher">
-                        <div class="organization-chart-tree-item-image">
-                            <img src="{{teacher_cebu.image if teacher_cebu.image else image_placeholder}}">
-                        </div>
-                        <div class="organization-chart-tree-item-content">
-                            <span>{{teacher_cebu.name}}</span>
-                            <br>
-                            <span>{{teacher_cebu.position_label}}</span>
+                        <div>
+                            <div class="organization-chart-tree-item-image">
+                                <img src="{{teacher_cebu.image if teacher_cebu.image else image_placeholder}}">
+                            </div>
+                            <div class="organization-chart-tree-item-content">
+                                <span>{{teacher_cebu.name}}</span>
+                                <br>
+                                <span>{{teacher_cebu.position_label}}</span>
+                            </div>
                         </div>
                     </div>
                     <div class="organization-chart-tree-branch">
-                        <h2>CEBU<br>MAIN</h2>
+                        <h3>CEBU<br>MAIN</h3>
                     </div>
                     <div class="organization-chart-tree-manager">
-                        <div class="organization-chart-tree-item-image">
-                            <img src="{{branch_manager_cebu.image if branch_manager_cebu.image else image_placeholder}}">
-                        </div>
-                        <div class="organization-chart-tree-item-content">
-                            <span>{{branch_manager_cebu.name}}</span>
-                            <br>
-                            <span>{{branch_manager_cebu.position_label}}</span>
+                        <div>
+                            <div class="organization-chart-tree-item-image">
+                                <img src="{{branch_manager_cebu.image if branch_manager_cebu.image else image_placeholder}}">
+                            </div>
+                            <div class="organization-chart-tree-item-content">
+                                <span>{{branch_manager_cebu.name}}</span>
+                                <br>
+                                <span>{{branch_manager_cebu.position_label}}</span>
+                            </div>
                         </div>
                     </div>
                 </li>
                 <li>
                     <div class="organization-chart-tree-teacher">
-                        <div class="organization-chart-tree-item-image">
-                            <img src="{{teacher_iloilo.image if teacher_iloilo.image else image_placeholder}}">
-                        </div>
-                        <div class="organization-chart-tree-item-content">
-                            <span>{{teacher_iloilo.name}}</span>
-                            <br>
-                            <span>{{teacher_iloilo.position_label}}</span>
+                        <div>
+                            <div class="organization-chart-tree-item-image">
+                                <img src="{{teacher_iloilo.image if teacher_iloilo.image else image_placeholder}}">
+                            </div>
+                            <div class="organization-chart-tree-item-content">
+                                <span>{{teacher_iloilo.name}}</span>
+                                <br>
+                                <span>{{teacher_iloilo.position_label}}</span>
+                            </div>
                         </div>
                     </div>
                     <div class="organization-chart-tree-branch">
                         <h3>ILOILO</h3>
                     </div>
                     <div class="organization-chart-tree-manager">
-                        <div class="organization-chart-tree-item-image">
-                            <img src="{{branch_manager_iloilo.image if branch_manager_iloilo.image else image_placeholder}}">
-                        </div>
-                        <div class="organization-chart-tree-item-content">
-                            <span>{{branch_manager_iloilo.name}}</span>
-                            <br>
-                            <span>{{branch_manager_iloilo.position_label}}</span>
+                        <div>
+                            <div class="organization-chart-tree-item-image">
+                                <img src="{{branch_manager_iloilo.image if branch_manager_iloilo.image else image_placeholder}}">
+                            </div>
+                            <div class="organization-chart-tree-item-content">
+                                <span>{{branch_manager_iloilo.name}}</span>
+                                <br>
+                                <span>{{branch_manager_iloilo.position_label}}</span>
+                            </div>
                         </div>
                     </div>
                 </li>
                 <li>
                     <div class="organization-chart-tree-teacher">
-                        <div class="organization-chart-tree-item-image">
-                            <img src="{{teacher_bohol.image if teacher_bohol.image else image_placeholder}}">
-                        </div>
-                        <div class="organization-chart-tree-item-content">
-                            <span>{{teacher_bohol.name}}</span>
-                            <br>
-                            <span>{{teacher_bohol.position_label}}</span>
+                        <div>
+                            <div class="organization-chart-tree-item-image">
+                                <img src="{{teacher_bohol.image if teacher_bohol.image else image_placeholder}}">
+                            </div>
+                            <div class="organization-chart-tree-item-content">
+                                <span>{{teacher_bohol.name}}</span>
+                                <br>
+                                <span>{{teacher_bohol.position_label}}</span>
+                            </div>
                         </div>
                     </div>
                     <div class="organization-chart-tree-branch">
                         <h3>BOHOL</h3>
                     </div>
                     <div class="organization-chart-tree-manager">
-                        <div class="organization-chart-tree-item-image">
-                            <img src="{{branch_manager_bohol.image if branch_manager_bohol.image else image_placeholder}}">
-                        </div>
-                        <div class="organization-chart-tree-item-content">
-                            <span>{{branch_manager_bohol.name}}</span>
-                            <br>
-                            <span>{{branch_manager_bohol.position_label}}</span>
+                        <div>
+                            <div class="organization-chart-tree-item-image">
+                                <img src="{{branch_manager_bohol.image if branch_manager_bohol.image else image_placeholder}}">
+                            </div>
+                            <div class="organization-chart-tree-item-content">
+                                <span>{{branch_manager_bohol.name}}</span>
+                                <br>
+                                <span>{{branch_manager_bohol.position_label}}</span>
+                            </div>
                         </div>
                     </div>
                 </li>
                 <li>
                     <div class="organization-chart-tree-teacher">
-                        <div class="organization-chart-tree-item-image">
-                            <img src="{{teacher_butuan.image if teacher_butuan.image else image_placeholder}}">
-                        </div>
-                        <div class="organization-chart-tree-item-content">
-                            <span>{{teacher_butuan.name}}</span>
-                            <br>
-                            <span>{{teacher_butuan.position_label}}</span>
+                        <div>
+                            <div class="organization-chart-tree-item-image">
+                                <img src="{{teacher_butuan.image if teacher_butuan.image else image_placeholder}}">
+                            </div>
+                            <div class="organization-chart-tree-item-content">
+                                <span>{{teacher_butuan.name}}</span>
+                                <br>
+                                <span>{{teacher_butuan.position_label}}</span>
+                            </div>
                         </div>
                     </div>
                     <div class="organization-chart-tree-branch">
                         <h3>BUTUAN</h3>
                     </div>
                     <div class="organization-chart-tree-manager">
-                        <div class="organization-chart-tree-item-image">
-                            <img src="{{branch_manager_butuan.image if branch_manager_butuan.image else image_placeholder}}">
-                        </div>
-                        <div class="organization-chart-tree-item-content">
-                            <span>{{branch_manager_butuan.name}}</span>
-                            <br>
-                            <span>{{branch_manager_butuan.position_label}}</span>
+                        <div>
+                            <div class="organization-chart-tree-item-image">
+                                <img src="{{branch_manager_butuan.image if branch_manager_butuan.image else image_placeholder}}">
+                            </div>
+                            <div class="organization-chart-tree-item-content">
+                                <span>{{branch_manager_butuan.name}}</span>
+                                <br>
+                                <span>{{branch_manager_butuan.position_label}}</span>
+                            </div>
                         </div>
                     </div>
                 </li>
                 <li>
                     <div class="organization-chart-tree-teacher">
-                        <div class="organization-chart-tree-item-image">
-                            <img src="{{teacher_palawan.image if teacher_palawan.image else image_placeholder}}">
-                        </div>
-                        <div class="organization-chart-tree-item-content">
-                            <span>{{teacher_palawan.name}}</span>
-                            <br>
-                            <span>{{teacher_palawan.position_label}}</span>
+                        <div>
+                            <div class="organization-chart-tree-item-image">
+                                <img src="{{teacher_palawan.image if teacher_palawan.image else image_placeholder}}">
+                            </div>
+                            <div class="organization-chart-tree-item-content">
+                                <span>{{teacher_palawan.name}}</span>
+                                <br>
+                                <span>{{teacher_palawan.position_label}}</span>
+                            </div>
                         </div>
                     </div>
                     <div class="organization-chart-tree-branch">
                         <h3>PALAWAN</h3>
                     </div>
                     <div class="organization-chart-tree-manager">
-                        <div class="organization-chart-tree-item-image">
-                            <img src="{{branch_manager_palawan.image if branch_manager_palawan.image else image_placeholder}}">
-                        </div>
-                        <div class="organization-chart-tree-item-content">
-                            <span>{{branch_manager_palawan.name}}</span>
-                            <br>
-                            <span>{{branch_manager_palawan.position_label}}</span>
+                        <div>
+                            <div class="organization-chart-tree-item-image">
+                                <img src="{{branch_manager_palawan.image if branch_manager_palawan.image else image_placeholder}}">
+                            </div>
+                            <div class="organization-chart-tree-item-content">
+                                <span>{{branch_manager_palawan.name}}</span>
+                                <br>
+                                <span>{{branch_manager_palawan.position_label}}</span>
+                            </div>
                         </div>
                     </div>
                 </li>
                 <li>
                     <div class="organization-chart-tree-teacher">
-                        <div class="organization-chart-tree-item-image">
-                            <img src="{{teacher_calbayog.image if teacher_calbayog.image else image_placeholder}}">
-                        </div>
-                        <div class="organization-chart-tree-item-content">
-                            <span>{{teacher_calbayog.name}}</span>
-                            <br>
-                            <span>{{teacher_calbayog.position_label}}</span>
+                        <div>
+                            <div class="organization-chart-tree-item-image">
+                                <img src="{{teacher_calbayog.image if teacher_calbayog.image else image_placeholder}}">
+                            </div>
+                            <div class="organization-chart-tree-item-content">
+                                <span>{{teacher_calbayog.name}}</span>
+                                <br>
+                                <span>{{teacher_calbayog.position_label}}</span>
+                            </div>
                         </div>
                     </div>
                     <div class="organization-chart-tree-branch">
                         <h3>CALBAYOG</h3>
                     </div>
                     <div class="organization-chart-tree-manager">
-                        <div class="organization-chart-tree-item-image">
-                            <img src="{{branch_manager_calbayog.image if branch_manager_calbayog.image else image_placeholder}}">
-                        </div>
-                        <div class="organization-chart-tree-item-content">
-                            <span>{{branch_manager_calbayog.name}}</span>
-                            <br>
-                            <span>{{branch_manager_calbayog.position_label}}</span>
+                        <div>
+                            <div class="organization-chart-tree-item-image">
+                                <img src="{{branch_manager_calbayog.image if branch_manager_calbayog.image else image_placeholder}}">
+                            </div>
+                            <div class="organization-chart-tree-item-content">
+                                <span>{{branch_manager_calbayog.name}}</span>
+                                <br>
+                                <span>{{branch_manager_calbayog.position_label}}</span>
+                            </div>
                         </div>
                     </div>
                 </li>
                 <li>
                     <div class="organization-chart-tree-teacher">
-                        <div class="organization-chart-tree-item-image">
-                            <img src="{{teacher_tacloban.image if teacher_tacloban.image else image_placeholder}}">
-                        </div>
-                        <div class="organization-chart-tree-item-content">
-                            <span>{{teacher_tacloban.name}}</span>
-                            <br>
-                            <span>{{teacher_tacloban.position_label}}</span>
+                        <div>
+                            <div class="organization-chart-tree-item-image">
+                                <img src="{{teacher_tacloban.image if teacher_tacloban.image else image_placeholder}}">
+                            </div>
+                            <div class="organization-chart-tree-item-content">
+                                <span>{{teacher_tacloban.name}}</span>
+                                <br>
+                                <span>{{teacher_tacloban.position_label}}</span>
+                            </div>
                         </div>
                     </div>
                     <div class="organization-chart-tree-branch">
                         <h3>TACLOBAN</h3>
                     </div>
                     <div class="organization-chart-tree-manager">
-                        <div class="organization-chart-tree-item-image">
-                            <img src="{{branch_manager_tacloban.image if branch_manager_tacloban.image else image_placeholder}}">
-                        </div>
-                        <div class="organization-chart-tree-item-content">
-                            <span>{{branch_manager_tacloban.name}}</span>
-                            <br>
-                            <span>{{branch_manager_tacloban.position_label}}</span>
+                        <div>
+                            <div class="organization-chart-tree-item-image">
+                                <img src="{{branch_manager_tacloban.image if branch_manager_tacloban.image else image_placeholder}}">
+                            </div>
+                            <div class="organization-chart-tree-item-content">
+                                <span>{{branch_manager_tacloban.name}}</span>
+                                <br>
+                                <span>{{branch_manager_tacloban.position_label}}</span>
+                            </div>
                         </div>
                     </div>
                 </li>
             </ul>
         </div>
+        
     </div>
 </section>
 
