feat: tarp photo to video

--- a/prime_admin/templates/lms/student_records/deployed/deployed_page.html
+++ b/prime_admin/templates/lms/student_records/deployed/deployed_page.html
@@ -276,9 +276,9 @@
                         </div>
                         <div class="form-row">
                             <div class="col-md-6">
-                                <div class="position-relative form-group"><label for="receipt_file" class="">Upload photo with holding tarp. in South Korea</label>
-                                    <input name="tarp_photo" type="file" accept="image/*" class="form-control-file">
-                                    <small class="form-text text-muted">Upload Receipt File. Valid file types: PNG or JPEG</small>
+                                <div class="position-relative form-group"><label for="receipt_file" class="">Upload video with holding tarp. in South Korea</label>
+                                    <input name="tarp_photo" type="file" accept="video/*" class="form-control-file">
+                                    <small class="form-text text-muted">Upload Receipt File. Valid file types: MP4, AVI, MKV, MOV</small>
                                 </div>
                             </div>
                             <div class="col-md-6">
